# networkSecurity_project

./: .env.template  .gitignore  Dockerfile  Jenkinsfile  README.md  app.py  custom_model_trainer.py  feature_importance.csv  main.py  push_data.py  pytest.ini  requirements.txt  run_api.sh  setup.py  setup_dvc.sh  train_with_components.py
backend/: =4.0  Dockerfile  app.py  dvc.yaml  project.json  pyproject.toml  requirements.txt  setup.py  train_model.py
backend/.dvc/: config
backend/artifact/: .gitignore
backend/artifact/02_01_2025_12_17_13/data_ingestion/ingested/: test.csv
backend/artifact/02_01_2025_12_29_06/data_validation/invalid/: train.csv
backend/artifact/04_25_2025_13_17_36/model_trainer/trained_model/: model.pkl
backend/artifact/04_25_2025_13_19_38/model_trainer/trained_model/: model.pkl
backend/artifact/04_25_2025_13_23_42/data_transformation/preprocessing_object/: transformed_object.pkl
backend/artifact/04_25_2025_13_23_42/data_transformation/transformed_data/: test.npz  train.npz
backend/artifact/04_25_2025_13_23_42/model_trainer/trained_model/: model.pkl
backend/artifact/04_25_2025_13_25_03/data_transformation/preprocessing_object/: transformed_object.pkl
backend/artifact/data_transformation/: scaler.pkl  test.npz  train.npz
backend/artifact/model_trainer/model/: label_encoder.pkl  scaler.pkl  vectorizer.pkl
backend/components/: data_transformation.py  data_validation.py  model_trainer.py
backend/constants/: __init__.py
backend/constants/Training_pipeline/: __init__.py
backend/custom_jenkins/: Dockerfile
backend/data_schema/: schema.yaml
backend/entity/: config_entity.py
backend/exception/: exception.py
backend/pipeline/: training_pipeline.py
backend/reports/: direct_training_metrics.json
tests/: test_api.py  (+2 more)
(+37 files in other folders)
