[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "networksecurity"
version = "0.0.1"
description = "Network Security Classification Project with DVC and MLflow"
readme = "README.md"
authors = [
    {name = "Augustine Chibueze", email = "chibuezeaugustine23@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dotenv",
    "pandas",
    "numpy",
    "pymongo",
    "certifi",
    "pymongo[srv]==3.6",
    "scikit-learn",
    "dill",
    "pyaml",
    "xgboost",
    "imbalanced-learn",
    "dask",
    "pyarrow",
    "dvc",
    "dvc-s3",
    "dvc-gdrive",
    "mlflow>=2.3.0",
    "dagshub",
    "pytest",
    "pytest-cov",
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.7",
    "starlette>=0.26.1",
    "python-multipart"
]

[project.urls]
"Homepage" = "https://github.com/austinLorenzMccoy/networkSecurity_project"
"Bug Tracker" = "https://github.com/austinLorenzMccoy/networkSecurity_project/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=networksecurity --cov-report=xml --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
